--- a/index (1).html
+++ b/index (1).html
@@ -298,7 +298,7 @@
         <input type="text" placeholder="Your name" class="box">
         <input type="email" placeholder="Your email" class="box">
         <input type="number" placeholder="Your number" class="box">
-	<input type="number" placeholder="Your location" class="box">
+	<input type="text" placeholder="Your location" class="box">
         <textarea name="" placeholder="Your message" class="box" id="" cols="30" rows="10"></textarea>
 
         <input type="submit" value="send message" class="btn">
